--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,22 @@
     <section class="main">
       <button id="show-popup-form" class="btn btn-main">Click me!</button>
       <!-- Display success message below -->
+      <h1>Thank you!</h1>
     </section>
     <div class="popup">
       <!-- Here goes your popup form HTML code -->
+        <form action="" class="popup-form">
+          <h1>Login</h1>
+          <input type="text" id="email" placeholder="Email">
+          <input type="password" id="passwd" placeholder="Password">
+          <label id="container">
+            <span>I agree to terms & conditions.</span>
+            <input type="checkbox" checked="checked">
+            <span id="checkmark"></span>
+          </label>
+          <button id="submit">Submit</button>
+          <span id="closebtn">&times</span>
+        </form>
     </div>
     <script src="js/index.min.js" charset="utf-8"></script>
   </body>
