--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
           <input type="password" id="passwd" placeholder="Password">
           <label id="container">
             <span>I agree to terms & conditions.</span>
-            <input type="checkbox" checked="checked">
+            <input type="checkbox" id="checkbox">
             <span id="checkmark"></span>
           </label>
           <button id="submit">Submit</button>
